--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Thermostat</title>
     <script type="text/javascript" src="src/thermostat.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="jquery-3.2.1.js"></script>
+  <script src="interface.js"></script>
+  <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <section>
-      <h1 id="temperature"></h1>
+      <h1 class="temperature" id="temperature"></h1>
       <p>
         <button id="temperature-up" type="button" name="Up">+</button>
         <button id="temperature-down" type="button" name="Down">-</button>
@@ -21,48 +22,5 @@
       </p>
       <a href="http://jquery.com/">jQuery</a>
     </section>
-    <script>
-      $(document).ready(function() {
-
-        var thermostat = new Thermostat();
-        $('#temperature').text(thermostat.temperature);
-
-        $('#temperature-up').on('click', function() {
-          thermostat.up();
-          updateTemperature();
-        });
-
-        $('#temperature-down').click(function() {
-          thermostat.down();
-          updateTemperature();
-        });
-
-        $('#temperature-reset').click(function() {
-          thermostat.resetTemperature();
-          updateTemperature();
-        });
-
-        $('#powersaving-on').click(function() {
-          thermostat.switchPowerSavingModeOn();
-          $('#power-saving-status').text('on')
-          updateTemperature();
-        });
-
-        $('#powersaving-off').click(function() {
-          thermostat.switchPowerSavingModeOff();
-          $('#power-saving-status').text('off')
-          updateTemperature();
-        });
-
-        $( "a" ).click(function( event ) {
-          alert( "Thanks for visiting!" );
-        });
-
-        function updateTemperature() {
-          $('#temperature').text(thermostat.temperature);
-        }
-
-      })
-    </script>
   </body>
 </html>
