Added Open Weather API

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
   <body>
     <section>
+      <h1>Current temperature: <span id="current-temperature"></span></h1>
+      <select id="current-city">
+          <option value="london">London</option>
+          <option value="newyork">New York</option>
+          <option value="manilla">Manilla</option>
+          <option value="porto">Porto</option>
+      </select>
+    </section>
+    <section>
       <h1 class="temperature" id="temperature"></h1>
       <p>
         <button id="temperature-up" type="button" name="Up">+</button>
